--- a/src/smallComponents/CardBalanceComp/styles.css
+++ b/src/smallComponents/CardBalanceComp/styles.css
@@ -4,7 +4,8 @@
 }
 
 .rear-div {
-    /* position: absolute; */
+    position: absolute;
+    z-index: 1;
     width: 285px;
     height: 149px;
     background: #9a63fb;
@@ -13,10 +14,11 @@
 }
 
 .card-info-div {
+    z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
+    /* position: absolute; */
     margin-top: 70px;
     background: #2f3046;
     border-radius: 24px;
