--- a/src/smallComponents/AnalyticsComp/styles.css
+++ b/src/smallComponents/AnalyticsComp/styles.css
@@ -1,6 +1,31 @@
 .analytics-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 361px;
     height: 217px;
-    background: gray;
     margin-top: 32px;
+}
+
+.analytics-bar {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.year-picker {
+    font-family: 'Roboto-Regular400';
+    font-size: 13px;
+    line-height: 15px;
+    color: #ffffff;
+    margin-right: 6px;
+}
+
+.bg-orange {
+    padding: 6px 10px;
+    background: #ff653a;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
 }
